--- a/source_code/config.ini
+++ b/source_code/config.ini
@@ -1,7 +1,9 @@
 [PROJ_CONF]
 PROJ_ID=planar-beach-402009
 KAFKA_TOPIC=project-kafka-spark2bigquery-topic
-KAFKA_SUBSCRIPTION=project-kafka-spark2bigquery-subscription
+KAFKA_CONSUMER_GROUP_ID=project-kafka-spark2bigquery-consumer-groupid
+KAFKA_BROKER=kafka:9092
 DATASET_NAME=online_shopping_dataset_kafka_spark2bigquery
 TABLE_NAME=online_shopping_kafka_spark2bigquery
 MY_CHANNEL=data_change2kafka
+MY_TRIGGER=data_change2kafka_trigger
